--- a/client/src/index.css
+++ b/client/src/index.css
@@ -8,7 +8,6 @@
 }
 
 * {
-  @apply dark:text-white box-border;
   scrollbar-width: none;
 }
 
